style/base.css
/*
    See the JupyterLab Developer Guide for useful CSS Patterns:

    https://jupyterlab.readthedocs.io/en/stable/developer/css.html
*/
.up-UIProfiler {
  height: 100%;
  overflow: hidden;
  color: var(--jp-content-font-color1);
  font-size: var(--jp-ui-font-size1);
  display: grid;
  grid-template:
    'launcher launcher'
    'history result';
  grid-template-columns: min-content 1fr;
  grid-template-rows: 0fr 1fr;
}

.up-BenchmarkLauncher {
  padding: 8px;
  grid-area: launcher;
  overflow: hidden;
  resize: vertical;
  min-height: 100px;
}

.up-BenchmarkLauncher-cards {
  display: grid;
  grid-template-columns: 2fr 2fr 1fr;
  overflow: hidden;
  height: 100%;
}

.up-BenchmarkLauncher-card {
  border-right: 1px solid var(--jp-layout-color2);
  overflow: hidden;
  padding: 8px;
  display: flex;
  flex-direction: column;
}

.up-BenchmarkLauncher-card:last-child {
  border-right: 0;
}

.up-BenchmarkLauncher-forms {
  overflow: auto;
  flex-grow: 1;
}

.up-BenchmarkLauncher .array-item button {
  margin: 2px;
}

.up-BenchmarkLauncher .btn-info[type='submit'] {
  display: none;
}

.up-BenchmarkLauncher fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

.up-BenchmarkLauncher fieldset legend {
  border: 0;
  margin: 0;
  padding: 0;
}

.up-BenchmarkLauncher-choices
  label:first-child
  .up-BenchmarkLauncher-choice-input {
  margin-left: 0;
}

.up-BenchmarkLauncher .jp-FormGroup-fieldLabel {
  font-weight: normal;
  margin: 0;
  font-size: var(--jp-ui-font-size1);
}

.up-BenchmarkLauncher fieldset input,
.up-BenchmarkLauncher fieldset select {
  font-size: var(--jp-content-font-size1);
  border-color: var(--jp-input-border-color);
  border-style: solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 4px 6px;
  background: none;
  color: var(--jp-content-font-color0);
  height: inherit;
}

.up-BenchmarkLauncher-choices {
  margin-bottom: 8px;
}

.up-BenchmarkMonitor .jp-Statusbar-ProgressBar-progress-bar {
  width: 100%;
}

.up-BenchmarkResult {
  padding: 8px;
  min-height: 0;
  grid-area: result;
  overflow: auto;
  border-top: var(--jp-border-width) solid var(--jp-border-color1);
  display: grid;
  grid:
    'summary'
    'details';
  grid-template-rows: min-content 1fr;
}

.up-BenchmarkResult-summary {
  display: grid;
  grid: 'benchmarkInfo environmentInfo';
  grid-area: summary;
  min-height: 0;
}

.up-BenchmarkResult-details {
  grid-area: details;
  min-height: 0;
  display: flex;
  flex-direction: column;
}

.up-BenchmarkHistory {
  grid-area: history;
  min-height: 0;
  overflow: auto;
  background-color: var(--jp-layout-color2);
  border-right: var(--jp-border-width) solid var(--jp-border-color1);
  border-top: var(--jp-border-width) solid var(--jp-border-color1);
}

.up-BenchmarkHistory-files {
  list-style-type: none;
  margin: 0;
  white-space: nowrap;
  padding: 0;
}

.up-BenchmarkHistory-file {
  padding: 4px 8px;
  border-right: 5px solid transparent;
}

.up-BenchmarkHistory-file:hover {
  background: var(--jp-layout-color1);
}

.up-BenchmarkHistory-file-active {
  border-color: var(--jp-brand-color1);
}

.up-BenchmarkMonitor {
  position: sticky;
  padding: 8px;
  width: 85%;
  margin: auto;
  bottom: 0;
}

.up-widget-heading {
  margin: 4px 8px;
  display: none;
}

.up-card-heading {
  margin: 4px 0;
}

.up-mod-completed .jp-Statusbar-ProgressBar-progress-bar > div {
  background: var(--jp-accent-color2);
}

.up-mod-completed .jp-Statusbar-ProgressBar-progress-bar {
  border-color: var(--jp-accent-color1);
}

.up-BenchmarkMonitor-content.up-mod-waiting {
  display: none;
}

.up-BenchmarkMonitor-content {
  background: var(--jp-layout-color0);
}

.up-BenchmarkResult-benchmarkInfo {
  grid-area: benchmarkInfo;
}

.up-BenchmarkResult-environmentInfo {
  grid-area: environmentInfo;
}

.up-BenchmarkResult .lm-DataGrid {
  min-height: 100%;
}

.up-BenchmarkResult-details .up-LuminoWidgetWrapper {
  flex-grow: 1;
  margin-top: 8px;
}

.up-BenchmarkLauncher .jp-mod-styled:disabled {
  opacity: 0.4;
}

.up-label-disabled {
  opacity: 0.4;
}

